[package]
name = "mandelbrot_wasm"
version = "0.1.0"
authors = ["Andrew Mellen <andy1030@me.com>"]
edition = "2018"

[lib]
name = "mandelbrot_wasm"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "mandelbrot"
path = "src/bin.rs"

[dependencies]
array2d = "0.2.1"
bmp = "0.5.0"
wasm-bindgen = "0.2.64"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'HtmlCanvasElement',
  'CanvasRenderingContext2d',
  'ImageData',
  'console',
]
